--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .container {
-  width: 60%;   /* This sets the width */
+  width: 60%;   /* This sets the widthh */
   margin: 0 auto;
 }
 
